--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script defer src="./js/api.js"></script>
+  <link rel="stylesheet" href="./css/main.css">
+  <script src="./js/jquery-3.7.0.min.js"></script>
+  <script defer src="./js/api_레시피.js"></script>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="form_wrap">
+      <form class="cook_form">
+        <input type="text" class="cook_search">
+        <button>검색</button>
+      </form>
+    </div>
+    <div class="form_wrap">
+      <form class="ingre_form">
+        <input type="text" class="ingre_search">
+        <button>검색</button>
+      </form>
+    </div>
+
+    <ul class="recipe_list_wrap">
+
+    </ul>
+  </div>
 </body>
 </html>
