--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="./css/main.css">
   <script src="./js/jquery-3.7.0.min.js"></script>
-  <script defer src="./js/api_레시피.js"></script>
+  <script defer src="./js/main.js"></script>
 </head>
 <body>
   <div class="container">
