--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 <body>
   <div class="container">
-    <div class="form_wrap">
+    <header>
+      <p class="form_tit">오늘의 음식</p>
       <form class="cook_form">
         <input type="text" class="cook_search">
         <button>검색</button>
       </form>
-    </div>
-    <div class="form_wrap">
+      <p class="form_tit">오늘의 재료</p>
       <form class="ingre_form">
         <input type="text" class="ingre_search">
         <button>검색</button>
       </form>
-    </div>
+    </header>
 
     <ul class="recipe_list_wrap">
 
