Add: info, na tip

--- a/sub.html
+++ b/sub.html
@@ -9,6 +9,33 @@
 </head>
 <body>
   <div class="container">
+    <div class="menu_img_wrap">
+      <img src="" alt="">
+    </div>
+    <p class="rcp_nm"></p>
+    <p class="rcp_pat"></p>
+    <div class="rcp_dtls_wrap">
+      <span class="sub_tit">재료</span>
+      <p class="rcp_dtls"></p>
+    </div>
+    <div class="rcp_info_tip_wrap">
+      <div class="rcp_info_wrap">
+        <span class="sub_tit">영양정보</span>
+        <p class="info_wgt"></p>
+        <p class="info_eng"></p>
+        <p class="info_car"></p>
+        <p class="info_pro"></p>
+        <p class="info_fat"></p>
+      </div>
+      <div class="rcp_na_tip_wrap">
+        <span class="sub_tit">저감조리법 TIP</span>
+        <div class="rcp_na_tip"></div>
+      </div>
+    </div>
+    <div class="menual_wrap">
+      <span class="sub_tit">레시피</span>
+      <ul class="menual_list"></ul>
+    </div>
   </div>
 </body>
 </html>
