--- a/sub.html
+++ b/sub.html
@@ -14,11 +14,11 @@
     </div>
     <p class="rcp_nm"></p>
     <p class="rcp_pat"></p>
-    <div class="rcp_dtls_wrap">
-      <span class="sub_tit">재료</span>
-      <p class="rcp_dtls"></p>
-    </div>
-    <div class="rcp_info_tip_wrap">
+    <div class="rcp_dtls_info_wrap">
+      <div class="rcp_dtls_wrap">
+        <span class="sub_tit">재료</span>
+        <p class="rcp_dtls"></p>
+      </div>
       <div class="rcp_info_wrap">
         <span class="sub_tit">영양정보</span>
         <p class="info_wgt"></p>
@@ -27,14 +27,14 @@
         <p class="info_pro"></p>
         <p class="info_fat"></p>
       </div>
-      <div class="rcp_na_tip_wrap">
-        <span class="sub_tit">저감조리법 TIP</span>
-        <div class="rcp_na_tip"></div>
-      </div>
     </div>
     <div class="menual_wrap">
       <span class="sub_tit">레시피</span>
       <ul class="menual_list"></ul>
+    </div>
+    <div class="rcp_na_tip_wrap">
+      <span class="sub_tit">저감조리법 TIP</span>
+      <div class="rcp_na_tip"></div>
     </div>
   </div>
 </body>
