--- a/sub.html
+++ b/sub.html
@@ -36,6 +36,18 @@
       <span class="sub_tit">저감조리법 TIP</span>
       <div class="rcp_na_tip"></div>
     </div>
+    <div class="comment_wrap">
+      <p class="comment_count">댓글 0</p>
+      <form class="comment_form">
+        <select name="emoticon" class="emoticon">
+          <option value="😊">😊</option>
+          <option value="🤨">🤨</option>
+        </select>
+        <input type="text" name="comment" class="comment" placeholder="내용을 입력하세요.">
+        <button type="submit">등록</button>
+      </form>
+      <ul class="comment_list"></ul>
+    </div>
   </div>
 </body>
 </html>
