--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@900&display=swap" rel="stylesheet">
 
     <script src="./js/jquery-3.7.0.min.js"></script>
-    <script defer src="./js/api_레시피.js"></script>
+    <script defer src="./js/main.js"></script>
   </head>
   <body>
    <header >
@@ -34,8 +34,10 @@
         </form>
       </div>
   </header>
-      <ul class="recipe_list_wrap"></ul>
-  
+  <div class="recipe_recommand_title">오늘의 메뉴</div>
+  <ul class="recipe_recommand"></ul>
+  <div class="recipe_title">Our recipe</div>
+  <ul class="recipe_list_wrap"></ul>
     </div>
   </body>
 </html>
