--- a/index.html
+++ b/index.html
@@ -1,43 +1,41 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@900&display=swap" rel="stylesheet">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@900&display=swap" rel="stylesheet">
 
-    <script src="./js/jquery-3.7.0.min.js"></script>
-    <script defer src="./js/main.js"></script>
-  </head>
-  <body>
-   <header >
-    <h1 class="logo">Today's Menu</h1>
-    <div class="container">
+  <script src="./js/jquery-3.7.0.min.js"></script>
+  <script defer src="./js/main.js"></script>
+</head>
+<body>
+  <div class="container">
+    <header>
+      <h1 class="logo">Today's Menu</h1>
       <div class="form_wrap">
         <form class="cook_form">
-         <span>메뉴&nbsp;&nbsp;&nbsp;</span>
-         <input type="text" class="cook_search"  placeholder="ex)김치찌개"/>
-         <button>검색</button>
+          <p class="form_tit">메뉴</p>
+          <input type="text" class="cook_search"  placeholder="ex)김치찌개"/>
+          <button>검색</button>
         </form>
-      </div>
-      <div class="form_wrap">
         <form class="ingre_form">
-          <span>재료&nbsp;&nbsp;&nbsp;</span>
+          <p class="form_tit">재료</p>
           <input type="text" class="ingre_search" placeholder="ex)돼지고기"/>
           <button>검색</button>
         </form>
       </div>
-  </header>
+    </header>
   <div class="recipe_recommand_title">오늘의 메뉴</div>
   <ul class="recipe_recommand"></ul>
   <div class="recipe_title">Our recipe</div>
   <ul class="recipe_list_wrap"></ul>
-    </div>
-  </body>
+  </div>
+</body>
 </html>
