엔티티코드

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <div class="form_wrap">
         <form class="cook_form">
           <p class="form_tit">메뉴</p>
-          <input type="text" class="cook_search"  placeholder="ex)김치찌개"/>
+          <input type="text" class="cook_search" placeholder="ex&rbbrk;김치찌개"/>
           <button>검색</button>
         </form>
         <form class="ingre_form">
           <p class="form_tit">재료</p>
-          <input type="text" class="ingre_search" placeholder="ex)돼지고기"/>
+          <input type="text" class="ingre_search" placeholder="ex&rbbrk;돼지고기"/>
           <button>검색</button>
         </form>
       </div>
