--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
         </form>
       </div>
     </header>
-    <div class="recipe_recommand_title">오늘의 메뉴</div>
-    <ul class="recipe_recommand"></ul>
+    <div class="rcp_recommand_wrap">
+      <div class="rcp_recommand_tit">오늘의 메뉴</div>
+      <ul class="rcp_recommand_list_wrap"></ul>
+    </div>
     <div class="recipe_title">Our recipe</div>
     <ul class="recipe_list_wrap"></ul>
   </div>
