--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </header>
     <div class="rcp_recommand_wrap">
-      <div class="rcp_recommand_tit">오늘의 메뉴</div>
+      <p class="rcp_recommand_tit">오늘의 메뉴</p>
       <ul class="rcp_recommand_list_wrap"></ul>
     </div>
     <div class="recipe_title">Our recipe</div>
