--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
       <p class="rcp_recommand_tit">오늘의 메뉴</p>
       <ul class="rcp_recommand_list_wrap"></ul>
     </div>
-    <div class="recipe_title">Our recipe</div>
-    <ul class="recipe_list_wrap"></ul>
+    <div class="rcp_wrap">
+      <div class="rcp_tit">Our recipe</div>
+      <ul class="rcp_list_wrap"></ul>
+    </div>
   </div>
 </body>
 </html>
