--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         </form>
       </div>
     </header>
-    <div class="rcp_recommand_wrap">
-      <p class="rcp_recommand_tit">오늘의 메뉴</p>
+    <section class="section_wrap">
+      <p class="section_tit">오늘의 메뉴</p>
       <ul class="rcp_recommand_list_wrap"></ul>
-    </div>
-    <div class="rcp_wrap">
-      <div class="rcp_tit">Our recipe</div>
+    </section>
+    <section class="section_wrap">
+      <p class="section_tit">Our recipe</p>
       <ul class="rcp_list_wrap"></ul>
-    </div>
+    </section>
   </div>
 </body>
 </html>
