--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>Document</title>
   <link rel="stylesheet" href="./css/main.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,7 +38,7 @@
       <ul class="rcp_recommand_list_wrap"></ul>
     </section>
     <section class="section_wrap">
-      <p class="section_tit">Our recipe</p>
+      <p class="section_tit">오늘의 레시피</p>
       <ul class="rcp_list_wrap"></ul>
     </section>
   </div>
