--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>오늘의 레시피</title>
   <link rel="stylesheet" href="./css/main.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,9 +17,11 @@
   <script defer src="./js/main.js"></script>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1 class="logo">Today's Menu</h1>
+  <header>
+    <div class="container">
+      <h1 class="logo">
+        <a href="./index.html">Today's Recipe</a>
+      </h1>
       <div class="form_wrap">
         <form class="cook_form">
           <p class="form_tit">메뉴</p>
@@ -32,7 +34,9 @@
           <button>검색</button>
         </form>
       </div>
-    </header>
+    </div>
+  </header>
+  <div class="container">
     <section class="section_wrap">
       <p class="section_tit">오늘의 메뉴</p>
       <ul class="rcp_recommand_list_wrap"></ul>
