--- a/sub.html
+++ b/sub.html
@@ -3,11 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>오늘의 레시피 상세</title>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/sub.css">
   <script defer src="./js/sub.js"></script>
 </head>
 <body>
+  <header>
+    <h1 class="logo">
+      <a href="./index.html">Today's Recipe</a>
+    </h1>
+  </header>
   <div class="container">
     <div class="menu_img_wrap">
       <img src="" alt="">
